# MCP_AI_MATH_App

./: client1.py  client2.py  main.py  pyproject.toml
